crates/solverforge-macros/tests/ui/fail/planning_list_variable_unknown_argument.stderr
error: unsupported planning_list_variable argument `unexpected`; supported arguments are element_collection, distance_meter, intra_distance_meter, route_get_fn, route_set_fn, route_depot_fn, route_distance_fn, route_feasible_fn, solution_trait
 --> tests/ui/fail/planning_list_variable_unknown_argument.rs:8:61
  |
8 |     #[planning_list_variable(element_collection = "visits", unexpected = "value")]
  |                                                             ^^^^^^^^^^^^^^^^^^^^
